--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Canvas Maze</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
+  <script type="text/javascript" src="js/mazeGen.js"></script>
+  <script type="text/javascript" src="js/genButtonClick.js"></script>
 </head>
 <body>
   <div id="titleArea">
